--- a/BigFloat/BigFloat.csproj
+++ b/BigFloat/BigFloat.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{30EFA68C-322A-4B31-9550-CF9FF489DB26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BigFloat</RootNamespace>
+    <RootNamespace>System.Numerics</RootNamespace>
     <AssemblyName>BigFloat</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
